test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-unmanaged-from-oknil-owned.good
init-field-dflt-nonnil-unmanaged-from-oknil-owned.chpl:8: error: cannot initialize field MyRecord.lhs of non-nilable type 'unmanaged MyClass' from a nilable 'owned MyClass?'
